# lib/api-spec/openapi.yaml
@@ -403,6 +403,21 @@ components:
         photo:
           type: string
           nullable: true
+        phone:
+          type: string
+          nullable: true
+        birthDate:
+          type: string
+          nullable: true
+        bio:
+          type: string
+          nullable: true
+        specialty:
+          type: string
+          nullable: true
+        instagram:
+          type: string
+          nullable: true
         active:
           type: boolean
         createdAt:
@@ -417,6 +432,12 @@ components:
         photo:
           type: string
           nullable: true
+        phone:
+          type: string
+          nullable: true
+        specialty:
+          type: string
+          nullable: true
       required: [name]
 
     UpdateBarberBody:
@@ -425,6 +446,21 @@ components:
         name:
           type: string
         photo:
+          type: string
+          nullable: true
+        phone:
+          type: string
+          nullable: true
+        birthDate:
+          type: string
+          nullable: true
+        bio:
+          type: string
+          nullable: true
+        specialty:
+          type: string
+          nullable: true
+        instagram:
           type: string
           nullable: true
         active:
